[gd_scene load_steps=4 format=3 uid="uid://colwrskcwv6ei"]

[ext_resource type="Script" path="res://Player1_deck.gd" id="1_piy7p"]
[ext_resource type="Script" path="res://Player2_deck.gd" id="2_hose6"]
[ext_resource type="Script" path="res://Game_logic.gd" id="2_ll8e2"]

[node name="Main" type="Node2D"]

[node name="Player1" type="Node2D" parent="."]

[node name="Player1_deck" type="Node" parent="Player1"]
script = ExtResource("1_piy7p")

[node name="Player2" type="Node2D" parent="."]

[node name="Player2_deck" type="Node" parent="Player2"]
script = ExtResource("2_hose6")

[node name="Game_logic" type="Node" parent="."]
script = ExtResource("2_ll8e2")
